--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ ACCESS_TOKEN_KEY=dammnkeey
 ACCESS_TOKEN_TIME=24h
 REFRESH_TOKEN_KEY=dammnkeey
 REFRESH_TOKEN_TIME=1d
-NODEMAILER_HOST = smtp.mail.ru
-NODEMAILER_PORT = 465
-EMAIL_USER = isfandiyor.vohidovv@mail.ru
-EMAIL_PASS = mWDrBU2YBrNXNuJet7jd
+NODEMAILER_HOST=smtp.mail.ru
+NODEMAILER_PORT=465
+EMAIL_USER=isfandiyor.vohidovv@mail.ru
+EMAIL_PASS=mWDrBU2YBrNXNuJet7jd
